--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "starter-ts",
-  "version": "1.0.2",
-  "description": "",
+  "name": "unplugin-react-inspector",
+  "version": "0.0.1",
+  "description": "A plugin to improve the happiness index of react development",
   "keywords": [],
   "scripts": {
     "dev": "rollup -c -w",
@@ -31,6 +31,9 @@
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@types/babel__core": "^7.20.0",
+    "@types/connect": "^3.4.35",
+    "@types/node": "^20.1.2",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.36.0",
@@ -55,5 +58,14 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@babel/plugin-transform-typescript": "^7.21.3",
+    "connect": "^3.7.0",
+    "launch-editor-middleware": "^2.6.0",
+    "magic-string": "^0.30.0",
+    "unplugin": "^1.3.1"
   }
 }
