--- a/playground/rspack/package.json
+++ b/playground/rspack/package.json
@@ -14,6 +14,7 @@
     "@rspack/cli": "latest",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "unplugin-react-inspector": "workspace:*"
   }
 }
