--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@babel/core": "^7.21.8",
     "@babel/plugin-transform-typescript": "^7.21.3",
     "connect": "^3.7.0",
+    "get-port": "^6.1.2",
     "launch-editor-middleware": "^2.6.0",
     "magic-string": "^0.30.0",
     "react": "^18.2.0",
