--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
-  "types": "./dist/types/types.d.ts",
+  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs",
-      "types": "./dist/types/types.d.ts"
+      "types": "./dist/types/index.d.ts"
     },
     "./client": "./src/client/index.jsx"
   },
