--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "magic-string": "^0.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "turbo": "^1.10.7",
     "unplugin": "^1.3.1"
   },
   "directories": {
