--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "play:vite": "pnpm run build && pnpm run --filter ./playground/vite dev",
     "play:rspack": "pnpm run build && pnpm run --filter ./playground/rspack dev",
     "publish": "pnpm run build && pnpm publish --no-git-checks",
-    "dev": "rollup -c -w",
-    "build": "rollup -c && tsc -p ./tsconfig.json",
+    "dev": "node scripts/prepare.js && rollup -c -w",
+    "build": "node scripts/prepare.js && rollup -c && tsc -p ./tsconfig.json",
     "lint": "eslint . --fix",
     "format": "prettier --write .",
     "prepare": "husky install",
@@ -36,7 +36,11 @@
       "require": "./dist/index.cjs",
       "types": "./dist/types/index.d.ts"
     },
-    "./client": "./src/client/index.jsx"
+    "./client": {
+      "import": "./dist/client/index.mjs",
+      "require": "./dist/client/index.cjs",
+      "types": "./dist/types/client/index.d.ts"
+    }
   },
   "files": [
     "dist",
@@ -65,9 +69,11 @@
     "husky": "^8.0.3",
     "jest": "^29.4.3",
     "lint-staged": "^13.1.2",
+    "postcss": "^8.4.27",
     "prettier": "^3.0.0",
+    "rimraf": "^5.0.1",
     "rollup": "^3.15.0",
-    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "ts-jest": "^29.0.5",
     "typescript": "^5.0.0"
   },
