chore: update playground/rspack deps

--- a/playground/rspack/package.json
+++ b/playground/rspack/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@rspack/cli": "latest",
+    "@rspack/cli": "^0.2.8",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "typescript": "^5.0.4",
