--- a/playground/webpack/package.json
+++ b/playground/webpack/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.tsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env MODE=dev webpack serve --config config/webpack.dev.mjs",
+    "dev": "cross-env MODE=dev webpack serve --config config/webpack.dev.js",
     "build": "cross-env MODE=build webpack --config config/webpack.prod.js",
     "type-check": "tsc"
   },
