--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unplugin-react-inspector",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "A plugin to improve the happiness index of react development",
   "keywords": [
     "unplugin",
@@ -53,7 +53,6 @@
     "@jest/globals": "^29.4.3",
     "@qiuqfang/eslint-config": "^0.0.7",
     "@qiuqfang/rollup-plugin-swc": "^0.0.9",
-    "@qiuqfang/get-port": "^1.0.0",
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
@@ -75,7 +74,11 @@
     "rollup": "^3.15.0",
     "rollup-plugin-postcss": "^4.0.2",
     "ts-jest": "^29.0.5",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "@babel/core": "^7.21.8",
+    "@babel/plugin-transform-typescript": "^7.21.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
@@ -91,15 +94,15 @@
     }
   },
   "dependencies": {
-    "@babel/core": "^7.21.8",
-    "@babel/plugin-transform-typescript": "^7.21.3",
     "connect": "^3.7.0",
-    "get-port": "^6.1.2",
+    "@qiuqfang/get-port": "^1.0.0",
     "launch-editor-middleware": "^2.6.0",
     "magic-string": "^0.30.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "unplugin": "^1.3.1"
+  },
+  "peerDependencies": {
+    "react": ">=18.2.0",
+    "react-dom": ">=18.2.0"
   },
   "directories": {
     "test": "test"
